# risk-analyzer

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker_entrypoint.py  example_signal.txt  feedback_cli.py  feedback_query.py  main.py  pipeline.py  pyproject.toml  test_parser.py
src/: analyzer.py
src/agents/: metrics_agent.py  sentiment_agent.py  synthesis_agent.py  technical_agent.py  volatility_agent.py
src/models/: feedback.py  signal.py
src/parsers/: __init__.py  fast_parser.py  intelligence_parser.py  models.py  orchestrator.py
src/services/: audit_logger.py  context_aggregator.py  decision_gate.py  feedback_collector.py  indian_market_data.py  news_aggregator.py  rule_engine.py
src/utils/: signal_adapter.py
