[project]
name = "risk-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "asyncpg>=0.31.0",
    "ccxt>=4.5.51",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
]
